--- a/code2.html
+++ b/code2.html
@@ -1,7 +1,9 @@
 <html> 
     <head>
         <link rel="stylesheet"
-        href="style2.css"
+        href="style2.css">
+        <title>Ловорыб</title>
+    </head>
     <body>
         <nav>
             <a href="">Океанариум</a>
