--- a/code3.html
+++ b/code3.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <nav>
-            <a href="">Океанариум</a>
+            <a href="">Магазин</a>
             <a href="">На главную</a>
             <a href="">Ютуб-канал</a>
         </nav>
