--- a/code2.html
+++ b/code2.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <nav>
-            <a href="">Океанариум</a>
-            <a href="">На главную</a>
-            <a href="">Ютуб-канал</a>
+            <a href="https://trol228355.github.io/Lovorib/code3">Океанариум</a>
+            <a href="https://trol228355.github.io/Lovorib/">На главную</a>
+            <a href="https://trol228355.github.io/Lovorib/code4">Ютуб-канал</a>
         </nav>
         <main>
             <h1>Упс... Что-то пошло не так:(</h1>
