--- a/code3.html
+++ b/code3.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <nav>
-            <a href="">Магазин</a>
-            <a href="">На главную</a>
-            <a href="">Ютуб-канал</a>
+            <a href="https://trol228355.github.io/Lovorib/code2">Магазин</a>
+            <a href="https://trol228355.github.io/Lovorib/">На главную</a>
+            <a href="https://trol228355.github.io/Lovorib/code4">Ютуб-канал</a>
         </nav>
         <main>
             <h1>Океанариум</h1>
