--- a/code4.html
+++ b/code4.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <nav>
-            <a href="">Океанариум</a>
-            <a href="">На главную</a>
-            <a href="">Магазин</a>
+            <a href="https://trol228355.github.io/Lovorib/code3">Океанариум</a>
+            <a href="https://trol228355.github.io/Lovorib/">На главную</a>
+            <a href="https://trol228355.github.io/Lovorib/code2">Магазин</a>
         </nav>
         <main>
             <h1>Ютуб-канал</h1>
